--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
+  text-decoration: none;
   font-style: normal;
-  box-sizing: border-box;
+  font-weight: normal;
 }
-
